搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/system/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/system/menu.html
@@ -55,6 +55,16 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="menuType">类型</label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <select class="form-control" id="menuType" name="menuType">
+                                            <option value="0">业务菜单</option>
+                                            <option value="1">数据菜单</option>
+                                            <option value="0">管理菜单</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <label for="menuIndex" class="control-label col-md-3 col-sm-3 col-xs-12">顺序</label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
                                         <input id="menuIndex" name="menuIndex" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
@@ -168,20 +178,22 @@
             var resourceGuid = $("#resourceGuid").val();
             var menuName = $("#menuName").val();
             var menuIndex = $("#menuIndex").val();
+            var menuType = $("#menuType").val();
             var iconClass = $("#iconClass").val();
 
-            var menuVo = {
+            var menu = {
                 parentGuid:parentGuid,
                 resourceGuid:resourceGuid,
                 menuName:menuName,
                 menuIndex:menuIndex,
+                menuType:menuType,
                 iconClass:iconClass
             };//拼装成json格式
 
             $.ajax({
                 type:"POST",
-                url:"/menu/addMenu",
-                data:menuVo,
+                url:"/menu/add",
+                data:menu,
             });
         });
     </script>
