--- a/web/src/main/webapp/resources/css/custom.css
+++ b/web/src/main/webapp/resources/css/custom.css
@@ -3586,7 +3586,7 @@ form:after {
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7f9fa', endColorstr='#f0f0f0', GradientType=0);
     -ms-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
     -o-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
+    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;*/
     border-radius: 0 0 5px 5px;
     border-top: 1px solid #CFD5D9;
     padding: 15px 0
