搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/system/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/system/menu.html
@@ -102,7 +102,7 @@
             menu.initChildNodeSelect();
         });
 
-        $("#button_addMenu").on("click",menu.addMenu())
+        $("#button_addMenu").on("click",menu.addMenu)
     </script>
 
 </div>
