--- a/web/src/main/webapp/resources/css/custom.css
+++ b/web/src/main/webapp/resources/css/custom.css
@@ -3587,7 +3587,7 @@ form:after {
     -ms-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
     -o-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
     /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;*/
-    border-radius: 0 0 5px 5px;
+    /*border-radius: 0 0 5px 5px;*/
     border-top: 1px solid #CFD5D9;
     padding: 15px 0
 }
