搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/account/main.html
+++ b/web/src/main/webapp/WEB-INF/views/account/main.html
@@ -3,7 +3,7 @@
       layout:decorate="base/layout">
 
 <head>
-    <title>数据挖掘</title>
+    <title>数据分析引擎</title>
     <link rel="stylesheet" href="/resources/plugins/zTree/zTreeStyle.css"/>
 </head>
 <body>
