搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/account/login.html
+++ b/web/src/main/webapp/WEB-INF/views/account/login.html
@@ -33,13 +33,13 @@
                 <form>
                     <h1>欢迎使用数据分析引擎</h1>
                     <div>
-                        <input type="text" class="form-control" placeholder="Username" required="" />
+                        <input type="text" class="form-control" placeholder="Username" id="userName" name="userName" required="" />
                     </div>
                     <div>
-                        <input type="password" class="form-control" placeholder="Password" required="" />
+                        <input type="password" class="form-control" placeholder="Password" id="password" name="password" required="" />
                     </div>
                     <div>
-                        <a class="btn btn-default submit" href="index.html">Log in</a>
+                        <a class="btn btn-default submit" href="/account/login">Log in</a>
                         <a class="reset_pass" href="#">Lost your password?</a>
                     </div>
 
@@ -64,16 +64,16 @@
 
         <div id="register" class="animate form registration_form">
             <section class="login_content">
-                <form>
+                <form action="">
                     <h1>Create Account</h1>
                     <div>
-                        <input type="text" class="form-control" placeholder="Username" required="" />
+                        <input type="text" class="form-control" placeholder="Username" id="regName" name="regName" required="" />
                     </div>
                     <div>
-                        <input type="email" class="form-control" placeholder="Email" required="" />
+                        <input type="email" class="form-control" placeholder="Email" id="regEmail" name="regEmail" required="" />
                     </div>
                     <div>
-                        <input type="password" class="form-control" placeholder="Password" required="" />
+                        <input type="password" class="form-control" placeholder="Password" id="regPwd" name="regPwd" required="" />
                     </div>
                     <div>
                         <a class="btn btn-default submit" href="index.html">Submit</a>
@@ -90,8 +90,8 @@
                         <br />
 
                         <div>
-                            <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                            <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
+                            <h1><i class="fa fa-paw"></i> Grate Babel!</h1>
+                            <p>©2016 All Rights Reserved.</p>
                         </div>
                     </div>
                 </form>
