--- a/web/src/main/webapp/WEB-INF/views/base/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/base/menu.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <!-- start: TOP NAVIGATION CONTAINER -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!-- start: TOP NAVIGATION CONTAINER -->
     <div th:fragment="menu" class="col-md-3 left_col">
         <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
