--- a/web/src/main/webapp/WEB-INF/views/account/login.html
+++ b/web/src/main/webapp/WEB-INF/views/account/login.html
@@ -33,13 +33,13 @@
                 <form>
                     <h1>欢迎使用数据分析引擎</h1>
                     <div>
-                        <input type="text" class="form-control" placeholder="Username" id="userName" name="userName" required="" />
+                        <input type="text" class="form-control" placeholder="Username" id="loginUserName" name="loginUserName" required="" />
                     </div>
                     <div>
-                        <input type="password" class="form-control" placeholder="Password" id="password" name="password" required="" />
+                        <input type="password" class="form-control" placeholder="Password" id="loginPwd" name="loginPwd" required="" />
                     </div>
                     <div>
-                        <a class="btn btn-default submit" href="/account/login">Log in</a>
+                        <button id="login" class="btn btn-default submit" href="/account/login">Log in</button>
                         <a class="reset_pass" href="#">Lost your password?</a>
                     </div>
 
@@ -100,4 +100,9 @@
     </div>
 </div>
 </body>
+<script src="/resources/js/account.js"></script>
+<script type="text/javascript">
+    $("#button_login").on("click",account.login());
+    $("#button_register").on("click",account.register());
+</script>
 </html>
