--- a/web/src/main/webapp/WEB-INF/views/account/login.html
+++ b/web/src/main/webapp/WEB-INF/views/account/login.html
@@ -76,7 +76,7 @@
                         <input type="password" class="form-control" placeholder="Password" id="regPwd" name="regPwd" required="" />
                     </div>
                     <div>
-                        <input type="submit"  class="btn btn-default submit">Submit</input>
+                        <input type="submit"  class="btn btn-default submit" value="register"/>
                     </div>
 
                     <div class="clearfix"></div>
