--- a/web/src/main/webapp/WEB-INF/views/account/login.html
+++ b/web/src/main/webapp/WEB-INF/views/account/login.html
@@ -30,7 +30,8 @@
     <div class="login_wrapper">
         <div class="animate form login_form">
             <section class="login_content">
-                <form action="/account/login" method="post">
+                <!--<form action="/account/login" method="post">-->
+                <form>
                     <h1>欢迎使用数据分析引擎</h1>
                     <div>
                         <input type="text" class="form-control" placeholder="Username" id="userName" name="userName" required="" />
@@ -39,7 +40,8 @@
                         <input type="password" class="form-control" placeholder="Password" id="password" name="password" required="" />
                     </div>
                     <div>
-                        <input type="submit" class="btn btn-default submit" value="Log in" />
+                        <!--<input type="submit" class="btn btn-default submit" value="Log in" />-->
+                        <button id="loginBtn" name="loginBtn" class="btn btn-default submit" value="Log in" />
                         <a class="reset_pass" href="#">Lost your password?</a>
                     </div>
 
@@ -101,15 +103,15 @@
 </div>
 </body>
 </html>
-<!--<script src="/resources/plugins/jquery/dist/jquery.min.js"></script>-->
-<!--<script src="/resources/js/account.js"></script>-->
-<!--<script type="text/javascript">-->
+<script src="/resources/plugins/jquery/dist/jquery.min.js"></script>
+<script src="/resources/js/account.js"></script>
+<script type="text/javascript">
 
-        <!--$("#loginBtn").click(function () {-->
-            <!--account.login();-->
-        <!--});-->
-        <!--$("#regBtn").click(function () {-->
-            <!--account.register();-->
-        <!--});-->
+        $("#loginBtn").click(function () {
+            account.login();
+        });
+//        $("#regBtn").click(function () {
+//            account.register();
+//        });
 
-<!--</script>-->
+</script>
