--- a/web/src/main/webapp/WEB-INF/views/account/login.html
+++ b/web/src/main/webapp/WEB-INF/views/account/login.html
@@ -30,8 +30,7 @@
     <div class="login_wrapper">
         <div class="animate form login_form">
             <section class="login_content">
-                <!--<form action="/account/login" method="post">-->
-                <form>
+                <form action="/doLogin" method="post">
                     <h1>欢迎使用数据分析引擎</h1>
                     <div>
                         <input type="text" class="form-control" placeholder="Username" id="userName" name="userName" required="" />
@@ -40,16 +39,15 @@
                         <input type="password" class="form-control" placeholder="Password" id="password" name="password" required="" />
                     </div>
                     <div>
-                        <!--<input type="submit" class="btn btn-default submit" value="Log in" />-->
-                        <button id="loginBtn" name="loginBtn" class="btn btn-default submit" value="Log in" />
-                        <a class="reset_pass" href="#">Lost your password?</a>
+                        <input type="submit" class="btn btn-default submit" value="登录"/>
+                        <a class="reset_pass" href="#">忘记密码?</a>
                     </div>
 
                     <div class="clearfix"></div>
 
                     <div class="separator">
-                        <p class="change_link">New to site?
-                            <a href="#signup" class="to_register"> Create Account </a>
+                        <p class="change_link">
+                            <a href="#signup" class="to_register">新用户注册</a>
                         </p>
 
                         <div class="clearfix"></div>
@@ -66,7 +64,7 @@
 
         <div id="register" class="animate form registration_form">
             <section class="login_content">
-                <form action="/account/register" method="post">
+                <form action="/doRegister" method="post">
                     <h1>Create Account</h1>
                     <div>
                         <input type="text" class="form-control" placeholder="Username" id="regName" name="regName" required="" />
@@ -78,14 +76,14 @@
                         <input type="password" class="form-control" placeholder="Password" id="regPwd" name="regPwd" required="" />
                     </div>
                     <div>
-                        <input type="submit"  class="btn btn-default submit" value="register"/>
+                        <input type="submit"  class="btn btn-default submit" value="注册"/>
                     </div>
 
                     <div class="clearfix"></div>
 
                     <div class="separator">
-                        <p class="change_link">Already a member ?
-                            <a href="#signin" class="to_register"> Log in </a>
+                        <p class="change_link">已有账号?
+                            <a href="#signin" class="to_register"> 请登录 </a>
                         </p>
 
                         <div class="clearfix"></div>
@@ -103,15 +101,3 @@
 </div>
 </body>
 </html>
-<script src="/resources/plugins/jquery/dist/jquery.min.js"></script>
-<script src="/resources/js/account.js"></script>
-<script type="text/javascript">
-
-        $("#loginBtn").click(function () {
-            account.login();
-        });
-//        $("#regBtn").click(function () {
-//            account.register();
-//        });
-
-</script>
