--- a/web/src/main/webapp/WEB-INF/views/base/header.html
+++ b/web/src/main/webapp/WEB-INF/views/base/header.html
@@ -10,76 +10,47 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
 
-                    <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <a href="javascript:;" class="user-profile dropdown-toggle"
+                       data-toggle="dropdown" aria-expanded="false">
                         <img src="/resources/images/img.jpg" alt="">John Doe
                         <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu pull-right">
-                        <li><a href="javascript:;"> Profile</a></li>
+                        <li><a href="javascript:;">个人信息</a></li>
                         <li>
                             <a href="javascript:;">
                                 <span class="badge bg-red pull-right">50%</span>
-                                <span>Settings</span>
+                                <span>设置</span>
                             </a>
                         </li>
-                        <li><a href="javascript:;">Help</a></li>
-                        <li><a href="/account/"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                        <li><a href="javascript:;">帮助</a></li>
+                        <li><a href="/logout"><i
+                                class="fa fa-sign-out pull-right"></i>注销</a>
+                        </li>
                     </ul>
 
                 </li>
 
                 <li role="presentation" class="dropdown">
-                    <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
+                    <a href="javascript:;" class="dropdown-toggle info-number"
+                       data-toggle="dropdown" aria-expanded="false">
                         <i class="fa fa-envelope-o"></i>
                         <span class="badge bg-green">6</span>
                     </a>
-                    <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
+                    <ul id="menu1" class="dropdown-menu list-unstyled msg_list"
+                        role="menu">
                         <li>
                             <a>
-                                <span class="image"><img src="/resources/images/img.jpg" alt="Profile Image" /></span>
+                                <span class="image"><img
+                                        src="/resources/images/img.jpg"
+                                        alt="Profile Image"/></span>
                                 <span>
-                      <span>John Smith</span>
-                      <span class="time">3 mins ago</span>
-                    </span>
+                                    <span>John Smith</span>
+                                    <span class="time">3 mins ago</span>
+                                </span>
                                 <span class="message">
-                      Film festivals used to be do-or-die moments for movie makers. They were where...
-                    </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                                <span class="image"><img src="/resources/images/img.jpg" alt="Profile Image" /></span>
-                                <span>
-                      <span>John Smith</span>
-                      <span class="time">3 mins ago</span>
-                    </span>
-                                <span class="message">
-                      Film festivals used to be do-or-die moments for movie makers. They were where...
-                    </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                                <span class="image"><img src="/resources/images/img.jpg" alt="Profile Image" /></span>
-                                <span>
-                      <span>John Smith</span>
-                      <span class="time">3 mins ago</span>
-                    </span>
-                                <span class="message">
-                      Film festivals used to be do-or-die moments for movie makers. They were where...
-                    </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                                <span class="image"><img src="/resources/images/img.jpg" alt="Profile Image" /></span>
-                                <span>
-                      <span>John Smith</span>
-                      <span class="time">3 mins ago</span>
-                    </span>
-                                <span class="message">
-                      Film festivals used to be do-or-die moments for movie makers. They were where...
-                    </span>
+                                  Film festivals used to be do-or-die moments for movie makers. They were where...
+                                </span>
                             </a>
                         </li>
                         <li>
@@ -92,8 +63,6 @@
                         </li>
                     </ul>
                 </li>
-
-
             </ul>
         </nav>
     </div>
