--- a/web/src/main/webapp/WEB-INF/views/system/role.html
+++ b/web/src/main/webapp/WEB-INF/views/system/role.html
@@ -6,14 +6,12 @@
     <title>角色管理</title>
     <!-- DataTables CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap.min.css">
 
 </head>
 <body>
 <div layout:fragment="content" >
     <!-- page content -->
     <div class="right_col" role="main">
-
 
         <div class="">
             <div class="clearfix"></div>
@@ -33,22 +31,14 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <table id="datatable-checkbox" class="table table-striped table-bordered bulk_action">
+                        <table id="role_table" class="table table-striped table-bordered bulk_action">
                             <thead>
                             <tr>
-                                <th></th>
-                                <th>角色</th>
-                                <th>描述</th>
+                                <th>role</th>
+                                <th>description</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr>
-                                <td>
-                                    <input type="checkbox" id="check-all" class="flat">
-                                </td>
-                                <td>系统管理员</td>
-                                <td>具有所有权限</td>
-                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -62,17 +52,39 @@
 </div>
 
 </body>
-<div layout:fragment="script">
     <!-- DataTables -->
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.1.1/js/dataTables.responsive.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.1.1/js/responsive.bootstrap.min.js"></script>
-</div>
+
+    <script type="text/javascript" charset="utf8" src="/resources/plugins/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="/resources/plugins/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 </html>
 <script type="text/javascript">
-    $(document).ready( function () {
-        $('#datatable-checkbox').DataTable();
-    } );
+    $(document).ready(function() {
+        $("#role_table").DataTable({
+            "bProcessing": false, // 是否显示取数据时的那个等待提示
+            "bServerSide": true,//这个用来指明是通过服务端来取数据
+            "sAjaxSource": "/role/list",//这个是请求的地址
+            "fnServerData": retrieveData, // 获取数据的处理函数
+            columns: [
+                {data: "role"},
+                {data: "description"}
+            ]
+        });
+    });
+
+    // 3个参数的名字可以随便命名,但必须是3个参数,少一个都不行
+    function retrieveData( sSource,aoData, fnCallback) {
+        $.ajax({
+            url : sSource,//这个就是请求地址对应sAjaxSource
+            data : {"aoData":JSON.stringify(aoData)},//这个是把datatable的一些基本数据传给后台,比如起始位置,每页显示的行数
+            type : 'post',
+            dataType : 'json',
+            async : true,
+            success : function(result) {
+                fnCallback(result);//把返回的数据传给这个方法就可以了,datatable会自动绑定数据的
+            },
+            error : function(msg) {
+            }
+        });
+    }
 </script>
 
