--- a/web/src/main/webapp/WEB-INF/views/system/role.html
+++ b/web/src/main/webapp/WEB-INF/views/system/role.html
@@ -5,7 +5,7 @@
 <head>
     <title>角色管理</title>
     <!-- DataTables CSS -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/resources/plugins/datatables.net-bs/css/dataTables.bootstrap.css">
 
 </head>
 <body>
@@ -68,36 +68,35 @@
             "pageLength":10,
             "pagingType":"full_numbers",//
             "autoWidth":false,
-            "scrollX":true,
             "iDisplayLength":false,
             "ordering":false,
             "searching":false,
             "fnServerData": retrieveData, // 获取数据的处理函数
-            "oLanguage": {
-
-                "sProcessing": "正在加载中......",
-
-                "sLengthMenu": "每页显示 _MENU_ 条记录",
-
-                "sZeroRecords": "对不起，查询不到相关数据！",
-
-                "sEmptyTable": "表中无数据存在！",
-
-                "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_ 条记录",
-
-                "sInfoFiltered": "数据表中共为 _MAX_ 条记录",
-
-                "oPaginate": {
-
-                    "sFirst": "首页",
-
-                    "sPrevious": "上一页",
-
-                    "sNext": "下一页",
-
-                    "sLast": "末页"
-                }
-            },
+//            "oLanguage": {
+//
+//                "sProcessing": "正在加载中......",
+//
+//                "sLengthMenu": "每页显示 _MENU_ 条记录",
+//
+//                "sZeroRecords": "对不起，查询不到相关数据！",
+//
+//                "sEmptyTable": "表中无数据存在！",
+//
+//                "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_ 条记录",
+//
+//                "sInfoFiltered": "数据表中共为 _MAX_ 条记录",
+//
+//                "oPaginate": {
+//
+//                    "sFirst": "首页",
+//
+//                    "sPrevious": "上一页",
+//
+//                    "sNext": "下一页",
+//
+//                    "sLast": "末页"
+//                }
+//            },
             //操作按钮
             columnDefs: [{
                 targets: 0,
