--- a/web/src/main/webapp/WEB-INF/views/system/role.html
+++ b/web/src/main/webapp/WEB-INF/views/system/role.html
@@ -31,7 +31,7 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <table id="role_table" class="table table-striped table-bordered bulk_action">
+                        <table id="roleTable" class="table table-striped table-bordered bulk_action">
                             <thead>
                             <tr>
                                 <td class="table-checkbox">
@@ -60,7 +60,7 @@
 </html>
 <script type="text/javascript">
     $(function() {
-        $("#role_table").dataTable({
+        $("#roleTable").dataTable({
             "bLengthChange":false,
             "bProcessing": false, // 是否显示取数据时的那个等待提示
             "bServerSide": true,//这个用来指明是通过服务端来取数据
@@ -72,31 +72,6 @@
             "ordering":false,
             "searching":false,
             "fnServerData": retrieveData, // 获取数据的处理函数
-//            "oLanguage": {
-//
-//                "sProcessing": "正在加载中......",
-//
-//                "sLengthMenu": "每页显示 _MENU_ 条记录",
-//
-//                "sZeroRecords": "对不起，查询不到相关数据！",
-//
-//                "sEmptyTable": "表中无数据存在！",
-//
-//                "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_ 条记录",
-//
-//                "sInfoFiltered": "数据表中共为 _MAX_ 条记录",
-//
-//                "oPaginate": {
-//
-//                    "sFirst": "首页",
-//
-//                    "sPrevious": "上一页",
-//
-//                    "sNext": "下一页",
-//
-//                    "sLast": "末页"
-//                }
-//            },
             //操作按钮
             columnDefs: [{
                 targets: 0,
