--- a/web/src/main/webapp/WEB-INF/views/system/role.html
+++ b/web/src/main/webapp/WEB-INF/views/system/role.html
@@ -21,11 +21,11 @@
                     <div class="x_title">
                         <h2>角色列表</small></h2>
                         <ul class="nav navbar-right panel_toolbox">
-                            <li><a><i class="fa fa-plus"></i></a>
+                            <li><a><i id="rolePlus" class="fa fa-plus" data-toggle="modal" data-target="#roleModal"></i></a>
                             </li>
-                            <li><a><i class="fa fa-edit"></i></a>
+                            <li><a><i id="roleEdit" class="fa fa-edit" data-toggle="modal" data-target="#roleModal"></i></a>
                             </li>
-                            <li><a><i class="fa fa-close"></i></a>
+                            <li><a><i id="roleDelete"class="fa fa-close"></i></a>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
@@ -45,10 +45,42 @@
                     </div>
                 </div>
             </div>
+            <!-- Large modal -->
+
+            <div id="roleModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel">添加角色</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="role-name" class="control-label">名称:</label>
+                                    <input type="text" class="form-control" id="role-name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="role-description" class="control-label">描述:</label>
+                                    <textarea class="form-control" id="role-description"></textarea>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Send message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="clearfix"></div>
         </div>
     </div>
+
+
     <!-- /page content -->
 </div>
 
