--- a/web/src/main/webapp/WEB-INF/views/system/role.html
+++ b/web/src/main/webapp/WEB-INF/views/system/role.html
@@ -23,7 +23,7 @@
                         <ul class="nav navbar-right panel_toolbox">
                             <li><a><i id="rolePlus" class="fa fa-plus" data-toggle="modal" data-target="#roleModal"></i></a>
                             </li>
-                            <li><a><i id="roleEdit" class="fa fa-edit" data-toggle="modal" data-target="#roleModal"></i></a>
+                            <li><a><i id="roleEdit" class="fa fa-edit"></i></a>
                             </li>
                             <li><a><i id="roleDelete"class="fa fa-close"></i></a>
                             </li>
@@ -34,9 +34,6 @@
                         <table id="roleTable" class="table table-striped table-bordered bulk_action">
                             <thead>
                             <tr>
-                                <td class="table-checkbox">
-                                    <input type="checkbox" id="checkAll"/>
-                                </td>
                                 <th>role</th>
                                 <th>description</th>
                             </tr>
@@ -79,8 +76,6 @@
             <div class="clearfix"></div>
         </div>
     </div>
-
-
     <!-- /page content -->
 </div>
 
@@ -104,14 +99,9 @@
             "iDisplayLength":false,
             "ordering":false,
             "searching":false,
+            "select":true,
             "fnServerData": retrieveData, // 获取数据的处理函数
-            //操作按钮
-            columnDefs: [{
-                targets: 0,
-                defaultContent: "<input type='checkbox' name='checkList'>"
-            }],
             columns: [
-                {data: "", width:"10px"},
                 {data: "role"},
                 {data: "description"}
             ]
@@ -132,6 +122,15 @@
                 }
             });
         }
+
+        $('#roleTable tbody').on('click', 'tr', function() {
+            if ($(this).hasClass('selected')) {
+                $(this).removeClass('selected');
+            } else {
+                roleTable.$('tr.selected').removeClass('selected');
+                $(this).addClass('selected');
+            }
+        });
     });
 
     $("#roleAddBtn").on("click", function() {
@@ -146,15 +145,35 @@
             },
             success: function(data) {
                 roleTable.fnDraw(false);
-//                roleTable.api().ajax.reload();
                 new PNotify({
                     title: '角色添加成功',
                     text: '角色添加成功',
                     type: 'success',
+                    nonblock: {
+                        nonblock: true
+                    },
                     styling: 'bootstrap3'
                 });
             }
         });
+    });
+    $("#roleEdit").on("click", function() {
+        var row = roleTable.api().row('.selected');
+        if (row.length != 1) {
+            new PNotify({
+                title: '提示',
+                text: '请先选择一条数据',
+                type: 'info',
+                nonblock: {
+                    nonblock: true
+                },
+                styling: 'bootstrap3'
+            });
+        }
+        var data = row.data();
+        $("input[name=roleName]").val(data.role);
+        $("textarea[name=roleDescription]").val(data.description);
+        $("#roleModal").modal('show');
     });
 
 </script>
