--- a/web/src/main/webapp/resources/plugins/datatables.net-bs/css/dataTables.bootstrap.css
+++ b/web/src/main/webapp/resources/plugins/datatables.net-bs/css/dataTables.bootstrap.css
@@ -183,3 +183,10 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:fir
 div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:last-child {
   padding-right: 0;
 }
+
+table.dataTable tbody tr {
+  background-color: #ffffff;
+}
+table.dataTable tbody tr.selected {
+  background-color: #B0BED9;
+}
